fix form-controls on safari

--- a/style.css
+++ b/style.css
@@ -422,6 +422,10 @@ img.alignright{
   font-size:16px;
   font-weight:700;
 }
+.form-control.input-sm{
+  padding:2px 10px;
+  line-height:1em;
+}
 .contact-form .btn-main{
   color:#8a8c8c;
   float:right;
